tests/paczka1/fuzzy1/38899726.err
Error in line 6: kuFqCecxW A511 42,9
Error in line 26: iteO1 A511 70,3
Error in line 27: iteO1 S171 25,3
Error in line 32: NkAgqurKGX S882 34,9
Error in line 33: NkAgqurKGX S403 30,4
